# evocube

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: edit_labeling.cpp  ev_test.cpp  evolabel.cpp  figure_generator.cpp  flagging_viewer.cpp  igl_core.cpp  init_from_folder.cpp  jacob_test.cpp  measurement.cpp  naive_labeling.cpp  openmp_test.cpp  polycube_withHexEx.cpp  supplemental_generator.cpp  synthesize_data.cpp  test_greedy.cpp  test_scaled_jacobian.cpp  tetrahedralize_app.cpp  viz_tet.cpp
include/: HexExWrapper.h  MyEmbreeRenderer.h  archive.h  bnd_to_tet.h  chart.h  disjointset.h  distortion.h  evaluator.h  evocube.h  flagging_utils.h  graphcut_labeling.h  labeling_individual.h  labeling_ops.h  latex.h  logging.h  mesh_io.h  minSJ.txt  quick_label_ev.h  scaled_jacobian.h  tet_boundary.h
lib/gco/: CMakeLists.txt
scripts/: obj_to_stl.py  plot_SJ_table.ipynb  step_to_tet.py  stl_to_tet.py
src/: HexExWrapper.cpp  MyEmbreeRenderer.cpp  chart.cpp  distortion.cpp  flagging_utils.cpp  graphcut_labeling.cpp  labeling_ops.cpp  latex.cpp  logging.cpp  quick_label_ev.cpp  tet_boundary.cpp
supplemental/: cover_page.tex
